fix z-index of the container profile remove another orange video file in remote github project change orange template to default template

--- a/src/css/video-js-extends.css
+++ b/src/css/video-js-extends.css
@@ -474,6 +474,7 @@ svg line{
   height: 94%; /*80%*/;
   /*border: 1Px solid red;*/
   position: absolute;
+  z-index: 0;
 }
 
 .profile-container.profile-container--hide{
